Images are no longer wrapped in p tags by Markdown
This enables easier manipulation of images by allowing floats etc. And
image captions look better.

--- a/css/footer-style.css
+++ b/css/footer-style.css
@@ -27,18 +27,8 @@
 	clear: both;
 }
 
-#html-preview,
-#html-source {
-	margin: 25px 0;
-}
-
 #html-source-area {
 	clear: both;
-}
-
-#instructions {
-	margin: 0;
-	padding: 0;
 }
 
 
